# inthermo

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: Makefile  api.md  conf.py  index.md  installation.md  make.bat  physics.md  usage.md
examples/: run_simulation.py
scripts/: setup_wsl_dolfinx.sh
src/inthermo/: WS_measurements.json  __init__.py  forcing.py  gemini_info.md  mesh.py  parameters.py  solver.py
tests/: test_forcing.py  test_inthermo.py
