[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inthermo"
version = "0.0.1"
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Juan Manuel Mauricio", email = "jmmauricio6@gmail.com" }]
dependencies = ["numpy"]

# FeniCSx (dolfinx, gmsh, petsc4py, mpi4py) is NOT pip-installable on most
# platforms and is provided by the runtime environment (conda-forge or the
# dolfinx/dolfinx Docker image -- see README / Dockerfile), so it is
# intentionally not listed here.
[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "myst-parser", "furo"]

[tool.hatch.build.targets.wheel]
packages = ["src/inthermo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
